Fix #108315: Illegal CUDA address with shadow-linked mesh emitters

A mistake in the intersection picking logic: if a mesh was hit at
least one intersection is to be recorded.

Pull Request: https://projects.blender.org/blender/blender/pulls/108320